<resources>
    <string name="app_name">Lab04</string>
    <string name="email">Email</string>
    <string name="phone">Telephone</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="regbtn">Register</string>
    <string name="cbtn">CANCEL</string>
    <string name="editText2">Name</string>
    <string name="name1">Name</string>
</resources>
